klaro consent, bg image prevent loading on mobile

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -159,11 +159,6 @@ h1.headline {
 }
 
 .bg-img-mac{
-    // background-image: url("../img/bg-mac.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position-y: calc(50% + 100px);
-    background-position-x: left;
     margin-left: -145px!important;
     width: 700px;
 }
@@ -979,3 +974,5 @@ footer {
         text-align: center;
     }
 }
+
+@import "../klaro/klaro";
